--- a/crates/story/Cargo.toml
+++ b/crates/story/Cargo.toml
@@ -12,7 +12,10 @@ gpui.workspace = true
 #gpui-component = { git = "https://github.com/longbridge/gpui-component.git", features = [
 #    "webview",
 #] }
-gpui-component = { git = "https://github.com/stormasm/gpui-component-ui.git", features = [
+#gpui-component = { git = "https://github.com/stormasm/gpui-component-ui.git", features = [
+#    "webview",
+#] }
+gpui-component = { path = "/Users/ma/j/tmp09/gpui-component-ui/crates/ui", features = [
     "webview",
 ] }
 #gpui-component = { workspace = true, features = ["webview"] }
